fixed the bleeding of the sale-list-body

--- a/app/views/pos/pos.css
+++ b/app/views/pos/pos.css
@@ -48,7 +48,8 @@ html {
     margin: 0 -5%;
 }
 .eq-cells {
-  width: 33%;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .center {
